--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,7 @@
 [user]
 	name = Sébastien Theys
 	email = seb@odoo.com
-	signingkey = D2272BC007201AC9
+	signingkey = 3342C21C3A5A1C9B
 [push]
 	default = simple
 
@@ -15,6 +15,7 @@
 	clean = git-lfs clean -- %f
 [cola]
 	tabwidth = 4
+	spellcheck = false
 [gui]
 	editor = subl
 	diffcontext = 5
@@ -22,3 +23,5 @@
 	verbosity = 5
 [alias]
 	checkoutr = checkout
+[gpg]
+	program = gpg
