--- a/.eslintrc
+++ b/.eslintrc
@@ -45,6 +45,7 @@
         "setInterval": false, "clearInterval": false, "Image": false, "jstz": false,
         "ZeroClipboard": false, "sessionStorage": false, "Node": false, "history": false,
         "gapi": false, "Event": false, "Gravitec": false, "navigator": false,
-        "OneSignal": false, "PDFJS": false, "ClipboardJS": false, "fuzzy": true
+        "OneSignal": false, "PDFJS": false, "ClipboardJS": false, "fuzzy": true,
+        "luxon": false
     }
 }
